Start work on RFB bundling/support